pkg/lang/syntax/testdata/ub/validate/invalid/factory/configuration-meta-alias.ub
factory: {
  configurations: {
    formal: greet {}
  }

  actions: {
    say: greet.say {
      @configuration: greet.formal
    }
  }
}
